force-app/main/default/objects/NotionSyncRetryConfig__mdt/NotionSyncRetryConfig__mdt.object-meta.xml
<CustomObject>
    <description>Configuration for Notion sync retry behavior</description>
    <label>Notion Sync Retry Config</label>
    <pluralLabel>Notion Sync Retry Configs</pluralLabel>
</CustomObject>