force-app/main/default/objects/NotionSyncRetryConfig__mdt/fields/ExponentialBackoff__c.field-meta.xml
<CustomField>
    <fullName>ExponentialBackoff__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Enable exponential backoff for retry delays</description>
    <label>Exponential Backoff</label>
    <type>Checkbox</type>
</CustomField>