force-app/main/default/objects/NotionSyncRetryConfig__mdt/fields/MaxRetryAttempts__c.field-meta.xml
<CustomField>
    <fullName>MaxRetryAttempts__c</fullName>
    <defaultValue>3</defaultValue>
    <description>Maximum number of retry attempts before giving up</description>
    <label>Max Retry Attempts</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>