force-app/main/default/objects/NotionSyncRetryConfig__mdt/fields/NotificationEmails__c.field-meta.xml
<CustomField>
    <fullName>NotificationEmails__c</fullName>
    <description>Comma-separated list of email addresses for failure notifications</description>
    <label>Notification Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>