force-app/main/default/objects/NotionSyncRetryConfig__mdt/fields/ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>ObjectApiName__c</fullName>
    <description>Salesforce object API name for object-specific retry configuration</description>
    <label>Object API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>