force-app/main/default/objects/NotionSyncRetryConfig__mdt/fields/RetryDelayMinutes__c.field-meta.xml
<CustomField>
    <fullName>RetryDelayMinutes__c</fullName>
    <defaultValue>5</defaultValue>
    <description>Base delay in minutes before first retry attempt</description>
    <label>Retry Delay Minutes</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>